# water-quality-ee

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  DATA_SOURCES.md  LICENSE  PLAN.md  README.en.md  README.md  README.ru.md  agent.yaml  data_loader_log.txt  full_audit_log.txt  pyproject.toml  requirements.streamlit.txt  requirements.txt  xml_parity_log.txt
.claude/: settings.json
.streamlit/: config.toml
citizen-service/: DEPLOY.md  GEO_SECRETS.md  PLAN.md  README.md  SOCIAL_SETUP.md  STREAMLIT_ACCESS.md  county_centroids.py  geocode_resolve.py  requirements.txt
docs/: ai_act_self_assessment.md  cloudflare_worker_analytics_example.js  data_gaps.md  datasheet.md  final_report_detailed.md  fria_light.md  frontend_architecture.md  frontend_data_contract.md  frontend_design_system.md  frontend_observability_and_cost.md  glosarij.md  human_oversight.md  investigation_log.md  key_management.md  learning_journey.md  ml_framing.md  ml_metrics_guide.md  model_card.md  normy.md  parametrid_ujula_avavee.md  parametry.md  phase_10_findings.md  phase_10_plan.md  presentation_notes.md  report.md  terviseamet_inquiry.md
frontend/: DEPLOY_CLOUDFLARE.md  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
notebooks/: 00_polnoye_rukovodstvo.ipynb  01_eda_supluskoha.ipynb  02_eda_full.ipynb  03_preprocessing.ipynb  04_models.ipynb  05_evaluation.ipynb  06_advanced_models.ipynb  07_data_gaps_audit.ipynb  colab_quickstart.ipynb
og-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
results/: INSIGHTS.md  README.md
scripts/: audit_xml_field_coverage.py  build_report_pdf.py  compute_report_metrics.py  drift_monitor.py  full_corpus_audit.py  refresh_citizen_geo.sh  sign_snapshot.py  temporal_hidden_violation_analysis.py  warm_county_geocode_cache.py
src/: county_infer.py  data_loader.py  evaluate.py  features.py  terviseamet_reference_coords.py
state/: social-last-post.json
tests/: test_audit_xml_field_coverage.py  test_county_centroids.py  test_county_infer_seed.py  test_county_mapping.py  test_data_loader.py  test_evaluate_threshold.py  test_features_meta.py  test_geocode_resolve.py  test_joogivesi_parse.py  (+3 more)
(+101 files in other folders)
