[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "water-quality-ee"
version = "0.1.0"
description = "TalTech water quality ML course project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "geopy>=2.4.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["data_loader", "features", "evaluate", "county_infer"]
